deploy/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apisim
spec:
  ports:
    - port: 4027
      protocol: TCP
      targetPort: http-apisim
  selector:
    app: apisim
  sessionAffinity: None
