deploy/kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apisim
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: apisim.citizix.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: apisim
                port:
                  number: 4027
